Fix wine/tidbits list row wrap

--- a/public/css/wiwu.css
+++ b/public/css/wiwu.css
@@ -284,6 +284,7 @@ hr {
 .item {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
 	padding: 20px 0px 20px 0px;
